k8s/apps/voicemail-receiver/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: voicemail-receiver
  namespace: voicemail-receiver
spec:
  type: LoadBalancer
  selector:
    app: voicemail-receiver
  ports:
    - port: 5060
      targetPort: 5060
      protocol: UDP
      name: sip
